tests/untried/neg/suggest-similar.scala
class Dingus
object Dingus {
  var flippity = 1
}
import Dingus.*

class A {
  flippitx = 123
  Nil map identiyt
  new Bingus
}
